--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 		<li><a href="contact">Contact</a></li>
 	</ul>
 
+	<!-- Section: slider -->
+
 	<section class="slider">
 		<ul class="slides">
 			<li>
@@ -82,6 +84,53 @@
 			</li>
 		</ul>
 	</section>
+
+	<!-- Section: search -->
+	<section class="section section-search teal darken-1 white-text center">
+		<div class="container">
+			<div class="row">
+				<div class="col1 s12">
+					<h3>Search Destinantions</h3>
+					<div class="input-field">
+						<input type="text" class="white grey-text autocomplete" placeholder="Aruba, Cancun, etc..." id="autocomplete-input">
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Section: icon boxes	 -->
+	<section class="section section-icons grey lighten-4 center">
+		<div class="container">
+			<div class="row">
+				<div class="col1 s12 m4">
+					<div class="card-panel">
+						<i class="material-icons large teal-text">room</i>
+						<h4>Pick Where</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque vel at, autem ipsam inventore quibusdam
+							iusto.</p>
+					</div>
+				</div>
+				<div class="col1 s12 m4">
+					<div class="card-panel">
+						<i class="material-icons large teal-text">store</i>
+						<h4>Travel Shop</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque vel at, autem ipsam inventore quibusdam
+							iusto.</p>
+					</div>
+				</div>
+				<div class="col1 s12 m4">
+					<div class="card-panel">
+						<i class="material-icons large teal-text">airplanemode_active</i>
+						<h4>Fly Cheap</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque vel at, autem ipsam inventore quibusdam
+							iusto.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<!--Import jQuery before materialize.js-->
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/materialize.min.js"></script>
@@ -95,6 +144,19 @@
 				height: 500,
 				transition: 500,
 				interval: 6000
+			});
+			//  init autocomplete
+			$('.autocomplete').autocomplete({
+				data: {
+					"Aruba": null,
+					"Cancun Mexico": null,
+					"Hawaii": null,
+					"Florida": null,
+					"California": null,
+					"Jamaica": null,
+					"Europe": null,
+					"The Bahamas": null
+				}
 			})
 		});
 	</script>
