--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<title>Custom Materialize Theme</title>
 </head>
 
-<body>
+<body id="home" class="scrollspy">
 	<div class="navbar-fixed">
 		<nav class="teal">
 			<div class="container">
@@ -28,7 +28,7 @@
 						<li><a href="#search">Search</a></li>
 						<li><a href="#popular">Popular places</a></li>
 						<li><a href="#gallery">Gallery</a></li>
-						<li><a href="contact">Contact</a></li>
+						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</div>
 			</div>
@@ -44,7 +44,7 @@
 
 	<!-- Section: slider -->
 
-	<section class="slider">
+	<section class="slider scrollspy">
 		<ul class="slides">
 			<li>
 				<img src="img/resort1.jpg" alt="Resort1">
@@ -86,7 +86,7 @@
 	</section>
 
 	<!-- Section: search -->
-	<section class="section section-search teal darken-1 white-text center">
+	<section id="search" class="section section-search teal darken-1 white-text center scrollspy">
 		<div class="container">
 			<div class="row">
 				<div class="col1 s12">
@@ -131,6 +131,183 @@
 		</div>
 	</section>
 
+	<!-- Section: Popular -->
+
+	<section id="popular" class="section section-popular scrollspy">
+		<div class="container">
+			<div class="row">
+				<h4 class="center"><span class="teal-text">Popular</span> Places</h4>
+				<div class="col s12 m4">
+					<div class="card">
+						<div class="card-image">
+							<img src="img/resort1.jpg" alt="resort1">
+							<span class="card-title">Cancun, Mexico</span>
+						</div>
+						<div class="card-content">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat asperiores ut natus error laudantium soluta
+								quae laboriosam et quos, odit provident? Ipsam eaque aperiam, libero soluta minima labore ex reiciendis.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col s12 m4">
+					<div class="card">
+						<div class="card-image">
+							<img src="img/resort2.jpg" alt="resort1">
+							<span class="card-title">The Bahamas</span>
+						</div>
+						<div class="card-content">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat asperiores ut natus error laudantium soluta
+								quae laboriosam et quos, odit provident? Ipsam eaque aperiam, libero soluta minima labore ex reiciendis.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col s12 m4">
+					<div class="card">
+						<div class="card-image">
+							<img src="img/resort3.jpg" alt="resort1">
+							<span class="card-title">Nova Scotia</span>
+						</div>
+						<div class="card-content">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat asperiores ut natus error laudantium soluta
+								quae laboriosam et quos, odit provident? Ipsam eaque aperiam, libero soluta minima labore ex reiciendis.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col s12 center">
+					<a href="" class="btn btn-large grey darken-3">
+						<i class="material-icons left">Send</i> Contact for booking
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Section: Follow	 -->
+	<section class="section section-follow teal darken-2 white-text center scrollspy">
+		<div class="container">
+			<div class="row">
+				<div class="col s12">
+					<h4>Follow Travelville</h4>
+					<p>Follow us on social media</p>
+					<a href="https://facebook.com" class="white-text" target="_blank">
+						<i class="fab fa-facebook fa-4x"></i>
+					</a>
+					<a href="https://twitter.com" class="white-text" target="_blank">
+						<i class="fab fa-twitter fa-4x"></i>
+					</a>
+					<a href="https://linkedin.com" class="white-text" target="_blank">
+						<i class="fab fa-linkedin fa-4x"></i>
+					</a>
+					<a href="https://googleplus.com" class="white-text" target="_blank">
+						<i class="fab fa-google-plus fa-4x"></i>
+					</a>
+					<a href="https://pinterest.com" class="white-text" target="_blank">
+						<i class="fab fa-pinterest fa-4x"></i>
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Section: Gallery -->
+	<section id="gallery" class="section section-gallery scrollspy">
+		<div class="container">
+			<h4 class="center">
+				<span class="teal-text">Photo</span> Gallery
+			</h4>
+			<div class="row">
+				<div class="col s12 m3">
+					<img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?beach" alt="">
+				</div>
+				<div class="col s12 m3">
+					<img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?travel" alt="">
+				</div>
+				<div class="col s12 m3">
+					<img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?nature" alt="">
+				</div>
+				<div class="col s12 m3">
+					<img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?water" alt="">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col s12 m3">
+					<img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?beaches" alt="">
+				</div>
+				<div class="col s12 m3">
+					<img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?traveling" alt="">
+				</div>
+				<div class="col s12 m3">
+					<img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?fire" alt="">
+				</div>
+				<div class="col s12 m3">
+					<img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?mountains" alt="">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col s12 m3">
+					<img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?walking" alt="">
+				</div>
+				<div class="col s12 m3">
+					<img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?surfing" alt="">
+				</div>
+				<div class="col s12 m3">
+					<img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?resting" alt="">
+				</div>
+				<div class="col s12 m3">
+					<img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?space" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- section: contact -->
+	<section id="contact" class="section section-contact scrollspy">
+		<div class="container">
+			<div class="row">
+				<div class="col s12 m6">
+					<div class="card-panel teal white-text center">
+						<i class="material-icons medium">email</i>
+						<h5>Contact Us For Booking</h5>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus sed praesentium delectus. Sit, mollitia
+							quo. Veniam repellat voluptas ipsum doloremque?</p>
+					</div>
+					<ul class="collection with-header">
+						<li class="collection-header">
+							<h4>Location</h4>
+						</li>
+						<li class="collection-item">Travelville Agency</li>
+						<li class="collection-item">555 Beach rd, Suite 33</li>
+						<li class="collection-item">Miami FL, 55555</li>
+					</ul>
+				</div>
+				<div class="col s12 m6">
+					<div class="card-panel grey lighten-3">
+						<h5>Please fill out this form</h5>
+						<div class="input-field">
+							<input type="text" placeholder="Name" id="name">
+							<label for="name">Name</label>
+						</div>
+						<div class="input-field">
+							<input type="email" placeholder="Email" id="email">
+							<label for="email">Email</label>
+						</div>
+						<div class="input-field">
+							<input type="text" placeholder="Phone" id="phone">
+							<label for="phone">Phone</label>
+						</div>
+						<div class="input-field">
+							<textarea class="materialize-textarea" placeholder="Enter Message" id="message"></textarea>
+							<label for="message">Message</label>
+						</div>
+						<input type="submit" value="Submit" class="btn">
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<!--Import jQuery before materialize.js-->
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/materialize.min.js"></script>
@@ -157,7 +334,10 @@
 					"Europe": null,
 					"The Bahamas": null
 				}
-			})
+			});
+
+			// init scrollspy
+			$('.scrollspy').scrollSpy();
 		});
 	</script>
 </body>
